--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,11 @@
-.App {
-  text-align: center;
+.card {
+  @apply rounded-xl m-4 text-gray-700 text-xs mx-4 nm-flat-white;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.button {
+ @apply text-sm font-bold py-1 px-4 rounded-full;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button--black {
+  @apply text-white nm-flat-gray-700 hover:bg-gray-700;
 }
